Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignIntObjBoolObj.quorum
class Main
    action Main
        Integer v
        v:SetValue(Test())
    end

    action Test() returns Integer
        Boolean var
        var:SetValue(true)
        return var
    end
end